# packt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LEARNING.md  LICENSE-APACHE  LICENSE-MIT  README.md  RULES.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
.omo/plans/: cicd-pipeline-overhaul.md  phase-1-implementation.md  phase-2-handoff.md
docs/: INTEGRATION_GUIDE.md
packt-cli/: Cargo.toml  README.md
packt-cli/src/: backup.rs  info.rs  list.rs  main.rs  migrate.rs  restore.rs  verify.rs
packt-lib/: Cargo.toml  README.md
packt-lib/benches/: pipeline.rs
packt-lib/src/: error.rs  lib.rs  types.rs
packt-lib/src/chunking/: fastcdc.rs  hints.rs  mod.rs
packt-lib/src/hash/: blake3_hasher.rs  mod.rs
packt-lib/src/index/: hashindex.rs  mod.rs
packt-lib/src/pipeline/: dedup_stage.rs  hasher_stage.rs  mod.rs  similarity_stage.rs
packt-lib/src/similarity/: mod.rs  palantir.rs  super_feature.rs
packt-lib/src/store/: cloud.rs  delta.rs  local.rs  mod.rs  pack.rs  store_api.rs
packt-lib/tests/: fuzz_tests.rs  integration_test.rs  property_tests.rs
packt-lib/tests/common/: mod.rs
packt-proxy/: Cargo.toml
packt-proxy/src/: main.rs  proxy.rs
scripts/: ci-coverage.sh  compare_all.sh  comprehensive_stress_test.sh  integrity_benchmark.sh  phase2_similarity_test.sh  phase3_comprehensive_benchmark.sh  phase4c_cross_layer_benchmark.sh  real_world_test_docker.sh
