[package]
name = "packt-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI for packt-lib — content-defined chunking with exact dedup"
repository = "https://github.com/BlackPool25/packt"

[[bin]]
name = "packt"
path = "src/main.rs"

[dependencies]
packt-lib = { path = "../packt-lib" }
blake3 = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
filetime = "0.2"
