[package]
name = "packt-cli"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "CLI for packt-lib -- content-defined chunking with exact dedup, near-duplicate detection, and delta compression"
repository = "https://github.com/BlackPool25/packt"
readme = "README.md"
homepage = "https://github.com/BlackPool25/packt"

[[bin]]
name = "packt"
path = "src/main.rs"

[dependencies]
packt-lib = { path = "../packt-lib", version = "0.5" }
blake3 = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
filetime = "0.2"
zstd = { version = "0.13" }
