[package]
name = "packt-lib"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Content-defined chunking library with exact dedup for binary data"
repository = "https://github.com/BlackPool25/packt"
authors = ["packt contributors"]
keywords = ["deduplication", "compression", "cdc", "chunking", "content-addressable"]
categories = ["compression", "filesystem"]

[dependencies]
fastcdc = "4"
blake3 = { version = "1", features = ["rayon"] }
zstd = { version = "0.13" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
rayon = "1"
crossbeam-channel = "0.5"
dashmap = "6"
thiserror = "2"
hex = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# gdelta v0.2.1 has a decode bug (returns empty output) — disabled pending fix
# gdelta = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
rand = "0.8"
walkdir = "2"

[[bench]]
name = "pipeline"
harness = false
