[package]
name = "packt-lib"
version = "0.5.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Content-defined chunking library with exact dedup, near-duplicate detection, and delta compression"
repository = "https://github.com/BlackPool25/packt"
readme = "README.md"
homepage = "https://github.com/BlackPool25/packt"
authors = ["packt contributors"]
keywords = ["deduplication", "compression", "cdc", "chunking", "content-addressable"]
categories = ["compression", "filesystem"]

[dependencies]
fastcdc = "4"
blake3 = { version = "1", features = ["rayon"] }
zstd = { version = "0.13", features = ["zstdmt"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
rayon = "1"
crossbeam-channel = "0.5"
dashmap = "6"
thiserror = "2"
hex = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
filetime = "0.2"
serde_json = "1"
# Cloud storage backends via OpenDAL (optional, behind "cloud" feature)
opendal = { version = "0.57", default-features = false, features = ["services-s3", "services-gcs", "blocking"], optional = true }
lru = { version = "0.12", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
# gdelta v0.2.1 has a decode bug (returns empty output) — disabled pending fix
# gdelta = "0.2"

[features]
cloud = ["dep:opendal", "dep:lru", "dep:tokio"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
rand = "0.8"
walkdir = "2"

[[bench]]
name = "pipeline"
harness = false
