[package]
name = "packt-proxy"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Transparent Docker registry proxy with layer dedup (CDC + delta)"
repository = "https://github.com/BlackPool25/packt"

[[bin]]
name = "packt-proxy"
path = "src/main.rs"

[dependencies]
packt-lib = { path = "../packt-lib", version = "0.6" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
oci-spec = "0.10"
opendal = { version = "0.57", default-features = false, features = ["services-fs"] }
flate2 = "1.0"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
